# std-big-int

./: .exemplar_version  .gersemirc  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci_tests.yml  fuzz.yml  pre-commit-update.yml
cookiecutter/{{cookiecutter.project_name}}/: README.md
examples/: CMakeLists.txt  todo.cpp
extra/: README.md  big_int_printer_gdb.py  big_int_printer_lldb.py
include/beman/big_int/: CMakeLists.txt  big_int.hpp  config.hpp  todo.hpp  wide_ops.hpp
include/beman/big_int/detail/: config.hpp  config.hpp.rej  config128.hpp  config_bit_int_detect.hpp  div_impl.hpp  floats.hpp  mul_impl.hpp  wide_ops.hpp
include/beman/std-big-int/: CMakeLists.txt  std-big-int.hpp  todo.hpp
infra/cmake/: appleclang-toolchain.cmake  gnu-toolchain.cmake  llvm-toolchain.cmake  msvc-toolchain.cmake
tests/beman/big_int/: CMakeLists.txt  addition.test.cpp  addition_bench.test.cpp  allocation.test.cpp  basic_construction.test.cpp  benchmark_testing.hpp  big_int.test.cpp  bit_shift.test.cpp  bitwise.test.cpp  boost_mp_testing.hpp  charconv.test.cpp  comparison.test.cpp  conversion.test.cpp  conversion_bench.test.cpp  division.test.cpp  division_huge.test.cpp  float_construction.test.cpp  generate_bitwise_test_data.py  generate_division_test_data.py  generate_karatsuba_test_data.py  increment_decrement.test.cpp  integer_assignment.test.cpp  karatsuba.test.cpp  karatsuba_edge.test.cpp  karatsuba_exercise.test.cpp  karatsuba_mersenne.test.cpp  modulus.test.cpp  multiplication.test.cpp  multiplication_bench.test.cpp  old_fuzzer_crashes.test.cpp  subtraction.test.cpp  testing.hpp  todo.test.cpp  vs_cpp_int.test.cpp  wide_ops.test.cpp
tests/beman/big_int/fuzzing/: CMakeLists.txt  fuzz_add.cpp  fuzz_common.hpp  fuzz_div.cpp  fuzz_mul.cpp  fuzz_sub.cpp
tests/beman/in_work_kara_mul/: test_kara_mul.cpp  test_kara_mul.non_cpp
tests/beman/std-big-int/: CMakeLists.txt  todo.test.cpp
