# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

set(ALL_EXAMPLES todo)
message("Examples to be built: ${ALL_EXAMPLES}")

foreach(example ${ALL_EXAMPLES})
    add_executable(beman.big_int.examples.${example})
    target_sources(beman.big_int.examples.${example} PRIVATE ${example}.cpp)
    target_link_libraries(
        beman.big_int.examples.${example}
        PRIVATE beman::big_int
    )
endforeach()
